updated CSS link properties with two new classes

--- a/code.html
+++ b/code.html
@@ -77,7 +77,7 @@ https://templatemo.com/tm-531-reflux
               documented), below are a few of the python scripts I have
               written for general use. Source code for these projects is
               publicly available on
-              <a href="https://github.com/sflury">my GitHub page</a>
+              <a class="one" href="https://github.com/sflury">my GitHub page</a>
               under the GNU/GPL v3.
               </span>
           </div>
@@ -85,7 +85,7 @@ https://templatemo.com/tm-531-reflux
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a href="https://github.com/sflury/OutLines">OutLines</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/OutLines">OutLines</a></h4>
                 <p>
                   Determines the emission and absorption line profiles arising
                   from galactic outflows under the Sobolev approximation with no
@@ -94,21 +94,10 @@ https://templatemo.com/tm-531-reflux
                 </p>
               </div>
             </div>
+
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a href="https://github.com/sflury/histogram">histogram</a></h4>
-                <p>
-                  Solves for the "true" histogram or population
-                  fraction (ratio of a subset to the total distribution) for a
-                  dataset by accounting for uncertainties in the data. Each
-                  histogram bin is therefore treated as a Poisson binomial
-                  variate.
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="service-item">
-                <h4><a href="https://github.com/sflury/kendall">kendall</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/kendall">kendall</a></h4>
                 <p>
                   Calculates the non-parameteric correlation coefficient Kendall's
                   tau, accounting for censoring (upper limits). Also includes
@@ -118,9 +107,25 @@ https://templatemo.com/tm-531-reflux
                 </p>
               </div>
             </div>
+
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a href="https://github.com/sflury/redneb">redneb</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/LyCsurv">LyCsurv</a></h4>
+                <p>
+                  Predicts Lyman continuum (LyC) luminosity or escape fraction
+                  using various multivariate survival analysis techniques,
+                  accounting for upper limits on LyC in cases of non-detections.
+                  Reference data set is the set of z~0.3 galaxies from the
+                  combined Low-redshift Lyman Continuum Survey (
+                  <a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F" class="one">
+                  LzLCS; Flury et al. 2022a</a>).
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="service-item">
+                <h4><a class="two" href="https://github.com/sflury/redneb">redneb</a></h4>
                 <p>
                   Derives nebular extinction from hydrogen
                   Balmer series emission lines, accounting for temperature and
@@ -130,9 +135,10 @@ https://templatemo.com/tm-531-reflux
                 </p>
               </div>
             </div>
+
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a href="https://github.com/sflury/feldcous">feldcous</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/feldcous">feldcous</a></h4>
                 <p>
                   Handles robust statistics of low count sources, including detection
                   probabilities, confidence intervals, and sampling of the
@@ -141,6 +147,20 @@ https://templatemo.com/tm-531-reflux
                 </p>
               </div>
             </div>
+
+            <div class="col-md-6">
+              <div class="service-item">
+                <h4><a class="two" href="https://github.com/sflury/histogram">histogram</a></h4>
+                <p>
+                  Solves for the "true" histogram or population
+                  fraction (ratio of a subset to the total distribution) for a
+                  dataset by accounting for uncertainties in the data. Each
+                  histogram bin is therefore treated as a Poisson binomial
+                  variate.
+                </p>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
