--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<a class="one" href=<!DOCTYPE html>
 <script async data-id="101420592" src="//static.getclicky.com/js"></script>
 <html lang="en">
   <head>
@@ -83,7 +83,7 @@ https://templatemo.com/tm-531-reflux
               LzLCS team but also through connections made at international conferences and
               (soon) the VANDELS team.<br><br>Below, you can read about some
               specific projects on which I am actively working. A list of my recent publications
-              can be found on the <a href=https://ui.adsabs.harvard.edu/search/q=docs(library%2F4YGg7Pm5TVOXW659qG2YPw)&sort=date%20desc%2C%20bibcode%20desc&p_=0>NASA ADS/ABS</a>
+              can be found on the <a  class="one" href=https://ui.adsabs.harvard.edu/search/q=docs(library%2F4YGg7Pm5TVOXW659qG2YPw)&sort=date%20desc%2C%20bibcode%20desc&p_=0>NASA ADS/ABS</a>
               </span
             >
           </div>
@@ -103,13 +103,13 @@ https://templatemo.com/tm-531-reflux
                   <h4>Lyman Continuum Escape</h4>
                   <p>
                     I am one of the leaders of the
-                    <a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F/abstract">Low-redshift Lyman Continuum Survey</a>,
-                    a large HST/COS program (PI <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>)
+                    <a class="one" href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F/abstract">Low-redshift Lyman Continuum Survey</a>,
+                    a large HST/COS program (PI <a class="one" href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>)
                     aimed at measuring the Lyman continuum (LyC) in the largest sample of z~0.3 galaxies to date.
                     Through my role in the LzLCS, I have fundamentally changed our
                     understanding of Lyman continuum escape by (i) providing a foundational
                     reference sample spanning a very wide parameter space, (ii)
-                    <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...930..126F/abstract">testing Lyman
+                    <a class="one" href="https://ui.adsabs.harvard.edu/abs/2022ApJ...930..126F/abstract">testing Lyman
                     continuum diagnostics (like O32 as shown on the left)</a>, and (iii) to investigate the
                     underlying mechanisms of ionizing photon escape. These results are critical to
                     providing empirical constraints on the origins and mechanisms of cosmic Reionization.
@@ -121,6 +121,33 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
+        </div>
+        <div class="left-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <br>
+              <div class="left-image">
+                <img src="assets/images/vandels_fesc.png" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-text">
+                <h4>Galaxies and Reionization</h4>
+                <p>
+                  I am applying low-redshift results from the LzLCS to galaxies at z>2.
+                  With <a class="one" href="https://fcullen.github.io/">Fergus Cullen</a>, I am using measurements from VLT/VIMOS+KMOS and
+                  Keck/MOSFIRE spectra of a subset of galaxies in <a class="one" href="http://vandels.inaf.it/">VANDELS</a>
+                  (PIs McLure and Pentericci) to infer statistically robust estimates of LyC escape fractions. Using
+                  calibrations of the results from z = 0.3 and z=2.5-5, I am assessing the new JWST samples of galaxies
+                  at z>6 to determine their roles in Cosmic Reionization and whether they imply rapid or prolonged
+                  Reionization histories. Preliminary results
+                  <a class="one" href="https://ui.adsabs.harvard.edu/abs/2023arXiv231106209C/abstract">from UV slope analysis</a>
+                  suggest that all galaxies across the UV luminosity function are involved and that Reionization occurs gradually.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
           <div class="right-image-post">
             <div class="row">
               <div class="col-md-6">
@@ -139,10 +166,10 @@ https://templatemo.com/tm-531-reflux
                     My spectroscopic studies of line-emitting galaxies establish the tools and
                     physical insight necessary to understand the effects that AGN and star formation have
                     on one another and, ultimately, the history and future of their host galaxies.
-                    Here, I depict <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230804393F/abstract">my own line profile model for galactic outflows</a>
+                    Here, I depict <a class="one" href="https://ui.adsabs.harvard.edu/abs/2023arXiv230804393F/abstract">my own line profile model for galactic outflows</a>
                     as traced by the [O III] 5007 nebular emission line and a comparison of ionizing SEDs from an upcoming paper by a mentee.<br>
                     For these projects, I collaborate with
-                    <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University),
+                    <a class="one" href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University),
                     with whom I also mentor Master's students and directly assist with their final thesis projects.
                   </p>
                 </div>
@@ -158,7 +185,6 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
-        </div>
 
         <div class="left-image-post">
           <div class="row">
@@ -179,9 +205,9 @@ https://templatemo.com/tm-531-reflux
                   interiors, I started a research group to investigate and develop novel
                   diagnostics of the dynamos and structure of low mass (< 1 Msun) stars using
                   Gaia, 2MASS, Kepler, and TESS photometry. I work with two other PhD candidates,
-                  <a href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
-                  and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Dartmouth), as well as
-                  rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).
+                  <a class="one" href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
+                  and <a class="one" href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Dartmouth), as well as
+                  rising graduate student <a class="one" href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).
                   With this team, I use time series and multivariate statistical analysis tools to
                   develop a novel method for gaining insight into the relationships between stellar
                   structure and dynamos, which has strong implications for exoplanet habitability.
@@ -207,7 +233,7 @@ https://templatemo.com/tm-531-reflux
                   I study the relationships between nebular emission lines,
                   chemical abundances, and physical properties like temperature
                   and density in active galactic nuclei (AGN). Currently, I collaborate with
-                  <a href="https://bv.fapesp.br/en/pesquisador/32467/oli-luiz-dors-junior">Oli Dors</a>
+                  <a class="one" href="https://bv.fapesp.br/en/pesquisador/32467/oli-luiz-dors-junior">Oli Dors</a>
                   and others on the abundance patterns in nearby Seyfert galaxies,
                   including the temperature structure of the AGN narrow-line region
                   and possible effects of shocks. Better understanding of the chemical abundances
@@ -217,7 +243,7 @@ https://templatemo.com/tm-531-reflux
                   <br>To the right, I illustrate a method for interpreting
                   nebular emission line spectra by predicting BPT-VO flux ratios using chemical abundances
                   and ion fractions for both AGN and star-forming galaxies (no photoionization models involved).
-                  For details on this sort of analysis, see <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.496.2191F/abstract">my paper</a>.
+                  For details on this sort of analysis, see <a class="one" href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.496.2191F/abstract">my paper</a>.
                 </p>
               </div>
             </div>
