various content updates for code, CV, and a typo in research

--- a/about.html
+++ b/about.html
@@ -101,10 +101,10 @@ https://templatemo.com/tm-531-reflux
               investigating the nature of line-emitting galaxies, I have come to love
               astronomy as a community of delightfully human scientists.</p>
               </span>
-          </div>
           <div class="line-dec"></div>
             <h2>Some Non-Astronomy Interests</h2>
           <div class="line-dec"></div>
+        </div>
 
           <div class="row">
             <div class="col-md-6">
@@ -114,8 +114,9 @@ https://templatemo.com/tm-531-reflux
                 <p>
                   I read. Voraciously. Recent compelling books include
                     "East of Eden" by Steinbeck,
-                    "The Things They Carried" by Tim O'Brien, and
-                    "The Book of Strange New Things" by Michael Faber.
+                    "The Things They Carried" by Tim O'Brien,
+                    "The Book of Strange New Things" by Michael Faber, and
+                    "The Priory of the Orange Tree" by Samantha Shannon.
                 </p>
               </div>
             </div>
@@ -136,7 +137,8 @@ https://templatemo.com/tm-531-reflux
                 <h4>Board Games</h4>
                 <p>
                   I enjoy the combined problem solving and social elements of tabletop board games.
-                  Current games I am into include "Settlers of Catan", "Terraforming Mars", and "Wingspan".
+                  Current games I avidly play with friends and fmaily include
+                  "Settlers of Catan", "Terraforming Mars", and "Wingspan".
                 </p>
               </div>
             </div>
@@ -145,12 +147,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="fourth-service-icon service-icon"></div>
                 <h4>Music</h4>
                 <p>
-                  I play classical piano. Pieces I am currently
-                  learning/finessing include
+                  I play classical piano. Currently I am working on solo versions of
                   "Rhapsody on a Theme of Paganini" by Rachmaninoff,
                   "Nocturne in C# Minor" by Chopin,
                   "1st Arabesque" by Debussy, and
-                  "1st Gymnopedie" by Satie.
+                  "1st Gymnopedie" by Satie; and ensemble arrangements of
+                  "Greensleeves" and various pieces from Studio Ghibli.
                 </p>
               </div>
             </div>
