--- a/code.html
+++ b/code.html
@@ -161,6 +161,21 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
 
+            <div class="col-md-6">
+              <div class="service-item">
+                <h4><a class="two" href="https://github.com/sflury/LinRegConf">LinRegConf</a></h4>
+                <p>
+                  Object class which, when instantiated, performs linear least
+                  squares regression using linear algebra (LUD or SVD to solve
+                  for the inverse) for a polynomial of arbitray specified order.
+                  Incorporates uncertainty in the abscissa (response variable)
+                  if provided. Computes confidence intervals on best-fit
+                  parameters. Includes plotting method to show fit with
+                  confidence intervals of arbitrary specified percentile.
+                </p>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
