--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
+              <span>Astronomer<br>FINESST Fellow<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-531-reflux
               <div class="right-text">
                 <h4>Activity in Low-Mass Stars</h4>
                 <p>
-                  Inspired by a graduate course the astrophysics of stellar
+                  Inspired by a graduate course on the astrophysics of stellar
                   interiors, I started a research group to investigate and develop novel
                   diagnostics of the dynamos and structure of low mass (< 1 Msun) stars using
                   Gaia, 2MASS, Kepler, and TESS photometry. I work with two other PhD candidates,
