updates to sidebar

--- a/code.html
+++ b/code.html
@@ -42,7 +42,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
+              <span>Astronomer<br>FINESST Fellow<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
