--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
+              <span>Astronomer<br>FINESST Fellow<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
@@ -57,7 +57,8 @@ https://templatemo.com/tm-531-reflux
               <p>template &copy 2019 Reflux Design<br>
               background by <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
               NASA/ESA/USRA/STScI</a><br>
-              all other content &copy Sophia Flury 2023</p>
+              all other content &copy Sophia Flury 2023
+            </p>
             </div>
           </div>
         </div>
