--- a/teaching.html
+++ b/teaching.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sophia Flury</h4>
-              <span>Astronomer<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
+              <span>Astronomer<br>FINESST Fellow<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
@@ -49,7 +49,7 @@ https://templatemo.com/tm-531-reflux
                 <li><a href="./teaching.html">Teaching</a></li>
                 <li><a href="./about.html">About Me</a></li>
                 <li><a href="./code.html">Coding</a></li>
-              <li><a href="./cv.html">CV</a></li>
+                <li><a href="./cv.html">CV</a></li>
               </ul>
             </nav>
 
@@ -57,7 +57,8 @@ https://templatemo.com/tm-531-reflux
               <p>template &copy 2019 Reflux Design<br>
               background by <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
               NASA/ESA/USRA/STScI</a><br>
-              all other content &copy Sophia Flury 2023</a></p>
+              all other content &copy Sophia Flury 2023
+            </p>
             </div>
           </div>
         </div>
@@ -70,6 +71,18 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
             <span
               >
+              I have extensive experience mentoring postgraduate (Master's)
+              students as they develop and mature as scientific thinkers and
+              researchers. Together with Ed Moran, I have co-advised several
+              Master's students with their thesis projects, playing a pivotal
+              role in the progress and development of their theses. My mentoring
+              philosophy relies on guided discovery, helping students to learn
+              and develop technical and critical thinking skills as well as
+              independence as they obtain and analyze results. I have assisted
+              my students in going to the AAS conferences, preparing
+              publications, and moving on to the next stages in astronomy
+              careers at the PhD level.
+              <br><br>
               I have experience with a variety of introductory astronomy classes both for
               majors and for non-majors. My most extensive TA work involved developing and
               teaching observational astronomy labs involving the use of python and
