updates to sidebar and code repository names and links

--- a/code.html
+++ b/code.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-531-reflux
               <p>template &copy 2019 Reflux Design<br>
               background by <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
               NASA/ESA/USRA/STScI</a><br>
-              all other content &copy Sophia Flury 2023
+              all other content &copy Sophia Flury 2023-2024
             </p>
             </div>
           </div>
@@ -125,7 +125,7 @@ https://templatemo.com/tm-531-reflux
 
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a class="two" href="https://github.com/sflury/redneb">redneb</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/redneb">RedNeb</a></h4>
                 <p>
                   Derives nebular extinction from hydrogen
                   Balmer series emission lines, accounting for temperature and
@@ -138,7 +138,7 @@ https://templatemo.com/tm-531-reflux
 
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a class="two" href="https://github.com/sflury/feldcous">feldcous</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/feldcous">FeldCous</a></h4>
                 <p>
                   Handles robust statistics of low count sources, including detection
                   probabilities, confidence intervals, and sampling of the
