--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-531-reflux
               <p>template &copy 2019 Reflux Design<br>
               background by <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
               NASA/ESA/USRA/STScI</a><br>
-              all other content &copy Sophia Flury 2023
+              all other content &copy Sophia Flury 2023-2024
             </p>
             </div>
           </div>
