updated to include KaplanMeier repo

--- a/code.html
+++ b/code.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-531-reflux
 
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a class="two" href="https://github.com/sflury/redneb">RedNeb</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/RedNeb">RedNeb</a></h4>
                 <p>
                   Derives nebular extinction from hydrogen
                   Balmer series emission lines, accounting for temperature and
@@ -138,7 +138,19 @@ https://templatemo.com/tm-531-reflux
 
             <div class="col-md-6">
               <div class="service-item">
-                <h4><a class="two" href="https://github.com/sflury/feldcous">FeldCous</a></h4>
+                <h4><a class="two" href="https://github.com/sflury/KaplanMeier">KaplanMeier</a></h4>
+                <p>
+                  Calculates and evaluates non-parametric survival functions for
+                  data with censoring (lower/upper limits) to determine if a
+                  measurement is consistent with a reference population / data
+                  set.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="service-item">
+                <h4><a class="two" href="https://github.com/sflury/FeldCous">FeldCous</a></h4>
                 <p>
                   Handles robust statistics of low count sources, including detection
                   probabilities, confidence intervals, and sampling of the
