updates to CV and pending work team, some typos

--- a/about.html
+++ b/about.html
@@ -138,8 +138,8 @@ https://templatemo.com/tm-531-reflux
                 <h4>Board Games</h4>
                 <p>
                   I enjoy the combined problem solving and social elements of tabletop board games.
-                  Current games I avidly play with friends and fmaily include
-                  "Settlers of Catan", "Terraforming Mars", and "Wingspan".
+                  Current games I avidly play with friends and family include
+                  "Settlers of Catan", "Terraforming Mars", "Everdell", and "Wingspan".
                 </p>
               </div>
             </div>
