--- a/code.html
+++ b/code.html
@@ -87,13 +87,26 @@ https://templatemo.com/tm-531-reflux
               <div class="service-item">
                 <h4><a class="two" href="https://github.com/sflury/OutLines">OutLines</a></h4>
                 <p>
-                  Determines the emission and absorption line profiles arising
+                  Determines the emission, absorption, and P Cygni line profiles arising
                   from galactic outflows under the Sobolev approximation with no
                   self absorption. Can be used for modeling observed spectral
                   features or for predictive purposes.
                 </p>
               </div>
             </div>
+
+            <!---
+            <div class="col-md-6">
+              <div class="service-item">
+                <h4><a class="two" href="https://github.com/sflury/towrecen">towrecen</a></h4>
+                <p>
+                  Calculates various statistical assessments of dispersion (towrecen in Old English)
+                  for two-dimensional data sets, including PCA, minimum Euclidean distances,
+                  total least squares, and Demming regression.
+                </p>
+              </div>
+            </div>
+            -->
 
             <div class="col-md-6">
               <div class="service-item">
