--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ https://templatemo.com/tm-531-reflux
               properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
               other galaxies. I collaborate with astronomers across the world, as a leader of the
               LzLCS team but also through connections made at international conferences and
-              (soon) the VANDELS team.<br><br>Below, you can read about some
-              specific projects on which I am actively working. A list of my recent publications
+              (soon) the <a  class="one" href=https://ingconfluence.ing.iac.es/confluence/display/WEAV/The+WEAVE+Project>WEAVE science team</a>.
+              <br><br>Below, you can read about some specific projects on which I am actively working. A list of my recent publications
               can be found on the <a  class="one" href=https://ui.adsabs.harvard.edu/search/q=docs(library%2F4YGg7Pm5TVOXW659qG2YPw)&sort=date%20desc%2C%20bibcode%20desc&p_=0>NASA ADS/ABS</a>
               </span
             >
