--- a/cv.html
+++ b/cv.html
@@ -40,8 +40,8 @@ https://templatemo.com/tm-531-reflux
               <a href="#"><img src="assets/images/author-image.png" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Sophia Flury</h4>
-              <span>Astronomer<br>FINESST Fellow<br>PhD candidate, UMass Amherst<br>sflury@umass.edu</span>
+              <h4>Sophia Flury, PhD</h4>
+              <span>Astronomer<br>Royal Observatory of Edinburgh<br>sflury@roe.ac.uk</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul>
