--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@ https://templatemo.com/tm-531-reflux
               photoionization models, and stellar population synthesis to infer fundamental
               properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
               other galaxies. I collaborate with astronomers across the world, as a leader of the
-              LzLCS team but also through connections made at international conferences and
-              (soon) the <a  class="one" href=https://ingconfluence.ing.iac.es/confluence/display/WEAV/The+WEAVE+Project>WEAVE science team</a>.
+              LzLCS team but also through connections made at international conferences and through
+              the <a  class="one" href=https://ingconfluence.ing.iac.es/confluence/display/WEAV/The+WEAVE+Project>WEAVE</a>
+              and <a  class="one" href=https://wavesurvey.org/>4MOST/WAVES</a> science teams.
               <br><br>Below, you can read about some specific projects on which I am actively working. A list of my recent publications
               can be found on the <a  class="one" href=https://ui.adsabs.harvard.edu/search/q=docs(library%2F4YGg7Pm5TVOXW659qG2YPw)&sort=date%20desc%2C%20bibcode%20desc&p_=0>NASA ADS/ABS</a>
               </span
@@ -111,7 +112,9 @@ https://templatemo.com/tm-531-reflux
                     reference sample spanning a very wide parameter space, (ii)
                     <a class="one" href="https://ui.adsabs.harvard.edu/abs/2022ApJ...930..126F/abstract">testing Lyman
                     continuum diagnostics (like O32 as shown on the left)</a>, and (iii) to investigate the
-                    underlying mechanisms of ionizing photon escape. These results are critical to
+                    underlying mechanisms of ionizing photon escape. I am also the PI of JWST/MIRI program
+                    <a class="one" href="https://www.stsci.edu/jwst/science-execution/program-information?id=5554">GO 5554</a>
+                    aimed at characterizing dust and gas in LyC emitters. These results are critical to
                     providing empirical constraints on the origins and mechanisms of cosmic Reionization.
                     Direct observations of LyC escape at z>6 are not physically possible; making
                     my results from the LzLCS the primary basis
