--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ https://templatemo.com/tm-531-reflux
                     physical insight necessary to understand the effects that AGN and star formation have
                     on one another and, ultimately, the history and future of their host galaxies.
                     Here, I depict <a class="one" href="https://ui.adsabs.harvard.edu/abs/2023arXiv230804393F/abstract">my own line profile model for galactic outflows</a>
-                    as traced by the [O III] 5007 nebular emission line and a comparison of ionizing SEDs from an upcoming paper by a mentee.<br>
+                    as traced by the [O III] 5007 nebular emission line and a comparison of ionizing SEDs from 
+                    <a class="one" href="https://ui.adsabs.harvard.edu/abs/2024arXiv241206763F/abstract">my recent paper on shocks</a>.<br>
                     For these projects, I collaborate with
                     <a class="one" href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University),
                     with whom I also mentor Master's students and directly assist with their final thesis projects.
