--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@ https://templatemo.com/tm-531-reflux
               galaxies. Much of my analysis incorporates nebular diagnostics,
               photoionization models, and stellar population synthesis to infer fundamental
               properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
-              other galaxies. I collaborate with astronomers across the world, as a leader of the
-              LzLCS team but also through connections made at international conferences and through
+              other galaxies. I collaborate with astronomers across the world, as a leader of
+              <a class="one" href=https://iopscience.iop.org/article/10.3847/1538-4365/ac5331>
+              a large HST program</a> and as PI of
+              <a class ="one" href=https://www.stsci.edu/jwst/science-execution/program-information?id=5554>
+              a JWST program</a>
+              but also through connections made at international conferences and through
               the <a  class="one" href=https://ingconfluence.ing.iac.es/confluence/display/WEAV/The+WEAVE+Project>WEAVE</a>
               and <a  class="one" href=https://wavesurvey.org/>4MOST/WAVES</a> science teams.
               <br><br>Below, you can read about some specific projects on which I am actively working. A list of my recent publications
